# gelbooru-scraper

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
cargo/: config.toml
src/: main.rs
