[package]
name = "gelbooru-scraper"
version = "0.2.0"
authors = ["Jiftoo <contact@jiftoo.dev>"]
description = "A simple CLI tool to download images from Gelbooru"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
console-subscriber = "0.2.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
